@@ -1,5 +1,9 @@
 2000-03-27  Paul D. Smith  <psmith@gnu.org>
 
+	* scripts/features/statipattrules: Test that static pattern rules
+	whose prerequisite patterns resolve to empty strings throw an
+	error (instead of dumping core).  Fixes PR/1670.
+
 	* scripts/features/reinvoke: Make more robust by touching "b"
 	first, to ensure it's not newer than "a".
 	Reported by Marco Franzen <Marco.Franzen@Thyron.com>.
@@ -7,7 +11,8 @@
 	* scripts/functions/call: Whoops.  The fix to PR/1527 caused
 	recursive invocations of $(call ...) to break.  I can't come up
 	with any way to get both working at the same time, so I backed out
-	the fix to 1527 and added a test case for recursive calls.
+	the fix to 1527 and added a test case for recursive calls.  This
+	also tests the fix for PR/1610.
 
 	* scripts/features/double_colon: Test that circular dependencies
 	in double-colon rule sets are detected correctly (PR/1671).
