@@ -1,5 +1,15 @@
 2000-03-27  Paul D. Smith  <psmith@gnu.org>
 
+	* read.c (record_files): Check if expanding a static pattern
+	rule's prerequisite pattern leaves an empty string as the
+	prerequisite, and issue an error if so.  Fixes PR/1670.
+	(read_makefile): Store the starting linenumber for a rule in
+	TGTS_STARTED.
+	(record_waiting_files): Use the TGTS_STARTED value for the file
+	location passed to record_file() instead of the current
+	linenumber, so error messages list the line where the target was
+	defined instead of the line after the end of the rule definition.
+
 	* remake.c (start_updating, finish_updating, is_updating): Fix
 	PR/1671; circular dependencies in double-colon rules are not
 	diagnosed.  These macros set the updating flag in the root
@@ -28,8 +38,8 @@
 
 2000-03-23  Paul Eggert  <eggert@twinsun.com>
 
-	* filedef.h (FILE_TIMESTAMP_STAT_MODTIME): Don't use
-	st_mtim.tv_sec; this doesn't work on Unixware.
+	* filedef.h (FILE_TIMESTAMP_STAT_MODTIME): Use st_mtime instead of
+	st_mtim.tv_sec; the latter doesn't work on Unixware.
 
 2000-03-18  Paul D. Smith  <psmith@gnu.org>
 
